// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentManager renders FileManager when type is file 1`] = `
<FileManager
  loadAttachments={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  prop1="foo"
  prop2="bar"
  prop3="baz"
  type="file"
/>
`;

exports[`AttachmentManager renders ImageManager when type is image 1`] = `
<DragDropContext(ImageManager)
  loadAttachments={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  prop1="foo"
  prop2="bar"
  prop3="baz"
  type="image"
/>
`;

exports[`FileManager matches last snapshot 1`] = `
<div
  className="file-manager attachment-manager"
>
  <div
    className="section-label section-label"
  >
    Files
  </div>
  <div
    className="file-previews"
  >
    <FilePreview
      key="0"
      position={0}
      removeFile={[Function]}
      url="foo.pdf"
    />
    <FilePreview
      key="1"
      position={1}
      removeFile={[Function]}
      url="bar.zip"
    />
    <div
      className="loading-file add-file add-image image-box"
    >
      Loading...
    </div>
    <Connect(ChangeImageButton)
      attachmentType="file"
      className="add-file-row"
      update={[Function]}
      uploadSettings={
        Object {
          "id": 1,
          "type": "post",
        }
      }
    >
      <div
        className="add-file add-image image-box"
      >
        <span
          className="add-file-plus"
        >
          +
        </span>
         Add File
      </div>
    </Connect(ChangeImageButton)>
  </div>
</div>
`;

exports[`FilePreview matches last snapshot 1`] = `
<div
  className="file-preview"
>
  <Icon
    className="icon-document icon-file"
    name="Document"
  />
  <div
    className="file-name caption-drk-lg"
  >
    foo.pdf
  </div>
  <div
    className="file-size"
  >
    23.3mb
  </div>
  <Icon
    className="remove-file remove-button"
    name="Ex"
    onClick={[Function]}
  />
</div>
`;

exports[`ImageManager matches last snapshot 1`] = `
<div
  className="image-manager attachment-manager"
>
  <div
    className="section-label section-label"
  >
    Images
  </div>
  <div
    className="image-previews"
  >
    <DropTarget(DragSource(ImagePreview))
      key="0"
      position={0}
      removeImage={[Function]}
      switchImages={[Function]}
      url="foo.png"
    />
    <DropTarget(DragSource(ImagePreview))
      key="1"
      position={1}
      removeImage={[Function]}
      switchImages={[Function]}
      url="bar.jpg"
    />
    <div
      className="add-image image-box"
    >
      <Loading />
    </div>
    <Connect(ChangeImageButton)
      attachmentType="image"
      update={[Function]}
      uploadSettings={
        Object {
          "id": 1,
          "type": "post",
        }
      }
    >
      <div
        className="add-image image-box"
      >
        +
      </div>
    </Connect(ChangeImageButton)>
  </div>
</div>
`;

exports[`ImagePreview matches last snapshot 1`] = `
<div
  className="image-preview image-box"
>
  <div
    className="image image-box"
    style={
      Object {
        "backgroundImage": "url(foo.zng)",
      }
    }
  >
    <Icon
      className="remove-image remove-button"
      name="Ex"
      onClick={[Function]}
    />
    <div
      className="drag-preview"
    />
  </div>
</div>
`;
